# CrewAI_creating_readmemd

./: README.md  requirements.txt
outputs/: README.md  gather_project_info_task.md  read_file_contents_task.md
readmemd/: pyproject.toml
readmemd/src/readmemd/: crew.py  main.py
readmemd/src/readmemd/config/: agents.yaml  tasks.yaml
readmemd/src/readmemd/tools/: custom_tool.py  test_code.py
