[project]
name = "readmemd"
version = "0.1.0"
description = "readmeMD using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
readmemd = "readmemd.main:run"
run_crew = "readmemd.main:run"
train = "readmemd.main:train"
replay = "readmemd.main:replay"
test = "readmemd.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
